platform/core/oauth2-proxy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: sre-platform
    pod-security.kubernetes.io/enforce: restricted
