platform/core/oauth2-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  labels:
    app: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: sre-platform
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4180
      targetPort: http
      protocol: TCP
  selector:
    app: oauth2-proxy
